dispatcher is implemented.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8887
 
+tb.api.host=https://thingsboard.cloud
+tb.api.username=adavydko@thingsboard.io
+tb.api.pass=demotenant
+tb.api.pe=true
+tb.api.cloud=true
+
+generator.solutions=WaterMetering
