--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,33 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>solution-template-generator</name>
 	<description>Solution template generator for Trendz Analytics</description>
+
 	<properties>
 		<java.version>11</java.version>
+		<tb.version>2.5.0PE-SNAPSHOT</tb.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thingsboard.common</groupId>
+			<artifactId>data</artifactId>
+			<version>${tb.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
