--- a/pom.xml
+++ b/pom.xml
@@ -8,21 +8,36 @@
 		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>org.thingsboard.trendz</groupId>
 	<artifactId>solution-template-generator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>solution-template-generator</name>
 	<description>Solution template generator for Trendz Analytics</description>
 
 	<properties>
 		<java.version>11</java.version>
 		<tb.version>2.5.0PE-SNAPSHOT</tb.version>
+		<spring.boot.version>3.0.0</spring.boot.version>
+		<jwt.version>4.2.1</jwt.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
+			<groupId>org.thingsboard.common</groupId>
+			<artifactId>data</artifactId>
+			<version>${tb.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.boot.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -32,18 +47,7 @@
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
-			<version>4.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.thingsboard.common</groupId>
-			<artifactId>data</artifactId>
-			<version>${tb.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<version>${jwt.version}</version>
 		</dependency>
 	</dependencies>
 
