Api is extended.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,5 +10,5 @@ tb:
     cloud:    false
 
 generator:
-  mode: generate  # generate, remove
+  mode: "${GENERATOR_MODE:generate}"  # generate, remove
   solutions: Basic
