--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<tb.version>2.5.0PE-SNAPSHOT</tb.version>
 		<spring.boot.version>3.0.0</spring.boot.version>
 		<jwt.version>4.2.1</jwt.version>
+		<guava.version>31.1-jre</guava.version>
 	</properties>
 
 	<dependencies>
@@ -48,6 +49,11 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>${jwt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 	</dependencies>
 
