add start year configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,4 @@ generator:
   mode: "${GENERATOR_MODE:generate}"  # generate, remove
   solutions: EnergyMetering
   skipTelemetry: false
+  startYear: 2022
