--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,6 @@ tb:
 
 generator:
   mode: "${GENERATOR_MODE:generate}"  # generate, remove
-  solutions: Basic
+  solutions: Greenhouse
   skipTelemetry: false
   startYear: 2022
