--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,5 @@ tb:
 generator:
   mode: "${GENERATOR_MODE:generate}"  # generate, remove
   solutions: Greenhouse
-  skipTelemetry: false
+  skipTelemetry: true
   startYear: 2022
