--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,5 @@ tb:
 generator:
   mode: "${GENERATOR_MODE:generate}"  # generate, remove
   solutions: Greenhouse
-  skipTelemetry: true
-  startYear: 2022
+  skipTelemetry: false
+  startYear: 2023
