--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,17 @@
 		<dependency>
 			<groupId>org.thingsboard.common</groupId>
 			<artifactId>data</artifactId>
-			<version>3.4.2PE-SNAPSHOT</version>
+			<version>3.6.2PE-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thingsboard.rule-engine</groupId>
+			<artifactId>api</artifactId>
+			<version>3.6.2PE-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.thingsboard.rule-engine</groupId>
 			<artifactId>rule-engine-components</artifactId>
-			<version>3.4.4-SNAPSHOT</version>
+			<version>3.6.2PE-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -65,6 +70,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
 			<version>1.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.17.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.sh0nk</groupId>
