--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -23,21 +23,35 @@
 		<guava.version>33.2.1-jre</guava.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>thingsboard-repo-deploy</id>
+			<name>ThingsBoard Repo Deployment</name>
+			<url>https://repo.thingsboard.io/artifactory/libs-release-public</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.thingsboard.common</groupId>
 			<artifactId>data</artifactId>
-			<version>3.6.2PE-SNAPSHOT</version>
+			<version>3.8.0PE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.thingsboard.rule-engine</groupId>
-			<artifactId>api</artifactId>
-			<version>3.6.2PE-SNAPSHOT</version>
+			<artifactId>rule-engine-api</artifactId>
+			<version>3.8.0PE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.thingsboard.rule-engine</groupId>
 			<artifactId>rule-engine-components</artifactId>
-			<version>3.6.2PE-SNAPSHOT</version>
+			<version>3.8.0</version>
 		</dependency>
 
 		<dependency>
