--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<description>Solution template generator for Trendz Analytics</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 		<tb.version>3.4.4-SNAPSHOT</tb.version>
 		<spring.boot.version>3.3.1</spring.boot.version>
 		<jwt.version>4.2.1</jwt.version>
@@ -109,6 +109,15 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
