--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,16 @@ tb:
 
 generator:
   mode: "${GENERATOR_MODE:generate}"  # generate, remove
-  solutions: WaterMetering
+  solutions: EnergyMetering, WaterMetering, Greenhouse
   skipTelemetry: false
+  # true - run generator expecting no entities (when 'generate' mode) or expecting all entities (when 'remove' mode)
+  # false - expecting that data is in inconsistent state
+  strictGeneration: false
   startYear: 2023
+  startGenerationTime: 1727740800000
+  endGenerationTime: 1728345600000
   telemetryTtl: 315360000 # 10 years in seconds
+
+logging:
+  level:
+    org.thingsboard.trendz.generator.service.rest.TbRestRequestInterceptor: INFO
