--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,9 @@ generator:
   # true - run generator expecting no entities (when 'generate' mode) or expecting all entities (when 'remove' mode)
   # false - expecting that data is in inconsistent state
   strictGeneration: false
+  # true - generate telemetry from 'startGenerationTime' to 'endGenerationTime' and without generating anomalies
+  # false - generate telemetry from static range in the code and with generating anomalies
+  fullTelemetryGeneration: true
   startYear: 2023
   startGenerationTime: 1727740800000
   endGenerationTime: 1728345600000
