--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,10 @@ generator:
   skipTelemetry: false
   # true - run generator expecting no entities (when 'generate' mode) or expecting all entities (when 'remove' mode)
   # false - expecting that data is in inconsistent state
-  strictGeneration: false
-  # true - generate telemetry from 'startGenerationTime' to 'endGenerationTime' and without generating anomalies
+  strictGeneration: true
+  # true - generate telemetry exactly from 'startGenerationTime' to 'endGenerationTime' and without generating anomalies
   # false - generate telemetry from static range in the code and with generating anomalies
-  fullTelemetryGeneration: true
+  fullTelemetryGeneration: false
   startGenerationTime: 1672531200000
   endGenerationTime: 1728864000000
   telemetryTtl: 315360000 # 10 years in seconds
