--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ tb:
 
 generator:
   mode: "${GENERATOR_MODE:generate}"  # generate, remove
-  solutions: ElectricityLoad
+  solutions: EnergyMetering, WaterMetering
   skipTelemetry: false
 
   # true - run generator expecting no entities (when 'generate' mode) or expecting all entities (when 'remove' mode)
@@ -22,6 +22,6 @@ generator:
   # true - generate telemetry exactly from 'startGenerationTime' to 'endGenerationTime' and without generating anomalies
   # false - generate telemetry from static range in the code and with generating anomalies
   fullTelemetryGeneration: false
-  startGenerationTime: 0
-  endGenerationTime: 9704067200000
+  startGenerationTime: 1672531200000
+  endGenerationTime: 1893456000000
   telemetryTtl: 315360000 # 10 years in seconds
